# ProjetAnnuel

./: .gitignore  Cargo.toml  Cas de tests.ipynb  README.md  TODO.md  api.py  errors.txt  lib_gridfs.py  linear_train_script.py  mlp_train_script.py  nnb.py  rapport.md  rapport_final.md  save_data.py  svm.rs  test.ipynb  test_with_dataset_mongo.ipynb  train_gridfs.ipynb
api/: .dockerignore  Dockerfile  api.py  db.py  requirements.txt
brouillons/: [Notebook] Classification Lineaire en Python.ipynb  test.ipynb
data/: iris.csv
dataset/: creation_image.py  dataset.ipynb  movies.json  movies_binary_classif.json  reisze_image.py  traitment_images.ipynb
extension/: manifest.json
nosql/: lib_gridfs.py  test.py  usage.ipynb
saved_model/: mlp_images_20x20_1200im_6-4-1npl_1000000ep_0-01lr.json  mlp_images_20x30_2000im_6-4-1npl_1000ep_0-01lr.json  upload.py
src/: before_gradient.rs  labels.rs  lib.rs  linear.rs  linear_abstract.rs  lloyd.rs  main.rs  mlp.rs  rbf.rs  svm.rs  utils.rs
tests/: Cas de tests Linear & MLP.ipynb  Cas de tests RBF & SVM.ipynb  (+10 more)
tests-cours/: Cas de tests Linear & MLP.ipynb  Cas de tests RBF & SVM.ipynb  test_linear_model_multi_classes.ipynb  test_mlp.ipynb  test_mlp.json  test_rbf.ipynb  test_svm2.ipynb  test_with_dataset copy 3.ipynb  test_with_dataset copy.ipynb  test_with_dataset.ipynb
tests-projets/: lib_gridfs.py  linear_genetic_train.py  linear_train_script.py  rbf_train_script.py  svm_linear_train_script.py  svm_train_script.py  test_linear_concurrent_svm.py  test_with_dataset_mongo.ipynb  train_gridfs.ipynb  train_gridfs_svm.ipynb
(+27 files in other folders)
