[package]
name = "ProjetAnnuel"
version = "0.1.1"
edition = "2024"

[lib]
name = "projetannuel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version= "0.24.0", features = ["extension-module"] }
rand = "*"
rand_distr = "*"
ordered-float = { version = "4.1", features = ["serde"] }
osqp="0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools="*"
